# Multi-agent-system-for-quality-attribute-based-code-refactoring

./: .gitignore  README.md  agents.py  constraints.txt  main.py  requirements.txt  tasks.py
BozzaArchitetturaManuale/: .gitignore  agents.py  attributes_before_refactoring  main.py  tasks.py  validation.py
BozzaArchitetturaManuale/Multi Agent System/: Errori  agents.py  main.py  tasks.py
BozzaArchitetturaManuale/Multi Agent System/db/: chroma.sqlite3
BozzaArchitetturaManuale/db/: chroma.sqlite3
BozzaArchitetturaManuale/src/main/java/it/univaq/disim/oca/oca_business/: OcaService.java
FlowScripts/: main.py
FlowScripts/crew/: crew.py
FlowScripts/crew/config/: agents.yaml  tasks.yaml
NormalScripts/: PrimoEsempio.py  agents.py  main.py
multi_agent_system_flow/: .gitignore  README.md  pyproject.toml
multi_agent_system_flow/src/multi_agent_system_flow/: attributes_before_refactoring  attributes_before_refactoring.xlsx  attributes_new_code_post_refactoring  attributes_post_refactoring  crewai_flow.html  main.py
multi_agent_system_flow/src/multi_agent_system_flow/crews/refactor_crew/: refactor_crew.py
multi_agent_system_flow/src/multi_agent_system_flow/crews/refactor_crew/config/: agents.yaml  tasks.yaml
multi_agent_system_flow/src/multi_agent_system_flow/crews/sonar_methods/: sonar_methods.py
multi_agent_system_flow/src/multi_agent_system_flow/crews/validation/: attributes_before_refactoring  costants.py  sonar_methods.py  utility_methods.py  validation.py
multi_agent_system_flow/src/multi_agent_system_flow/db/: chroma.sqlite3
(+1 files in other folders)
