[project]
name = "multi_agent_system_flow"
version = "0.1.0"
description = "multi_agent_system_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
]

[project.scripts]
kickoff = "multi_agent_system_flow.main:kickoff"
run_crew = "multi_agent_system_flow.main:kickoff"
plot = "multi_agent_system_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
